fix(ADA-1400): Changed Volume_Bar design to fit the contrast requirements (#914)
### Description of the Changes
 
Please add a detailed description of the change, whether it's an
enhancement or a bugfix.
If the PR is related to an open issue please link to it.
 
**Issue:**
 
Volume control bar was not meeting color contrast requirements
 
**Fix:**
 
Changed the color according to the design received, which is
corresponding to the color Tone1:
https://www.figma.com/design/8yTuCnuVHLYTFp89w7z05J/%F0%9F%93%BA-Player-v7?node-id=10596-24476

--- a/src/components/volume/_volume.scss
+++ b/src/components/volume/_volume.scss
@@ -105,7 +105,7 @@
     left: 0;
     width: 100%;
     border-radius: 0 0 2px 2px;
-    background-color: $primary-color;
+    background-color: $tone-1-color;
   }
 }
 
